Добавлена вставка favicon в html файлы

--- a/app/about.html
+++ b/app/about.html
@@ -6,13 +6,19 @@
 <meta name="description" content="" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+<link rel="apple-touch-icon" sizes="180x180" href="/the_favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/the_favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/the_favicon/favicon-16x16.png">
+<link rel="manifest" href="/the_favicon/manifest.json">
+<link rel="mask-icon" href="/the_favicon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/the_favicon/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-TileImage" content="/the_favicon/mstile-144x144.png">
+<meta name="msapplication-config" content="/the_favicon/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
 
 <meta name="robots" content="noindex,nofollow" />
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>О нас</title>
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" --><title>О нас</title><!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/template/css/jquery.bxslider.css" />
 <link rel="stylesheet" href="/template/css/styles.min.css" />
 <script src="/template/js/libs.min.js"></script>
@@ -26,8 +32,7 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]--> 
 
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 <body>
 
@@ -101,156 +106,12 @@
 <!-- =main -->
 <div class="main">
 	<div class="container">
-<!-- InstanceBeginEditable name="main" -->
-		<!-- =breadcrumbs -->
-		<div class="breadcrumbs">
-			<ul class="B_crumbBox">
-				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>
-				<li class="B_lastCrumb"><span class="B_currentCrumb">о нас</span></li>
-			</ul>
-		</div>
-		<!-- =/breadcrumbs -->
-		
-
-		<main class="text">
-			<h1 class="title">О НАШЕЙ КОМПАНИИ</h1>
-			<p>Компания "ЩелковоЭЛЕКТРИК" предоставляет полный спектр услуг по электромонтажу любой сложности в Московской области. Мы производим услуги от установки розетки до полной замены проводки в доме, квартире, коттедже, даче, магазине, офисе. </p>
-			<br>
-			<p>В нашей компании работают электрики с допусками и большим опытом работ, соблюдая все правила и нормы (СНиП). </p>
-			<br>
-			<p>Электрик на дом осуществляет выезд в города Московской области: <a href="#" title="">Щелково</a>,  <a href="#" title="">Мытищи</a>,  <a href="#" title="">Королев</a>,  <a href="#" title="">Ивантеевка</a>,  <a href="#" title="">Юбилейный</a>, <a href="">Лосино-Петровский</a>,  <a href="#" title="">Монино</a>,  <a href="#" title="">Купавна</a>,  <a href="#" title="">Ногинск</a>,  <a href="#" title="">Электросталь</a> и другие близлежащие населенные пункты.</p>
-			<br>
-			<p>Так же производятся выезд специалиста для замены проводки под ключ в частных домах, коттеджах и прочих строениях на этапе внутренних работ. </p>
-			<br>
-			<p>При планируемых больших объемах работ есть возможность вызвать электрика бесплатно - для оценки стоимости электромонтажных услуг и дальнейшего их заказа.</p>
-			<br>
-			<p>Наши <a href="#" title="">цены</a> непременно Вас порадуют!</p>
-			<br>
-			<p>Так же возможно вызвать электрика на дом в день обращения.</p>
-		</main>
-
-		<!-- =team -->
-		<section class="team">
-			<header>
-				<h2 class="title">Наша команда</h2>
-			</header>
-			<div class="flexbox">
-				<div class="team__item">
-					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-title="Алексей" data-id="1.php">
-						<div class="team__pic"><img src="images/team/people-1.jpg" alt="Алексей" /></div>
-						<div class="team__cell">
-							<div class="team__name">Алексей</div>
-							<div class="team__text">
-								<p>Опыт работы - более 10 лет.</p>
-								<p>Допуск по электробезопасности 4 группа.</p>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="team__item">
-					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-title="Максим" data-id="1.php">
-						<div class="team__pic"><img src="images/team/people-2.jpg" alt="Максим" /></div>
-						<div class="team__cell">
-							<div class="team__name">Максим</div>
-							<div class="team__text">
-								<p>Опыт работы - более 5 лет.</p>
-								<p>Допуск по электробезопасности 3 группа.</p>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="team__item">
-					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-title="Алиса" data-id="2.php">
-						<div class="team__pic"><img src="images/team/people-3.jpg" alt="Алиса" /></div>
-						<div class="team__cell">
-							<div class="team__name">Алиса</div>
-							<div class="team__text">
-								<p>Опыт работы - более 3 лет.</p>
-								<p>Допуск по электробезопасности 3 группа.</p>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="team__item">
-					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-title="Владимир" data-id="2.php">
-						<div class="team__pic"><img src="images/team/people-4.jpg" alt="Владимир" /></div>
-						<div class="team__cell">
-							<div class="team__name">Владимир</div>
-							<div class="team__text">
-								<p>Опыт работы - более 2 лет.</p>
-								<p>Допуск по электробезопасности 2 группа.</p>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="team__item">
-					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-title="Александр" data-id="1.php">
-						<div class="team__pic"><img src="images/team/people-5.jpg" alt="Александр" /></div>
-						<div class="team__cell">
-							<div class="team__name">Александр</div>
-							<div class="team__text">
-								<p>Опыт работы - более 10 лет.</p>
-								<p>Допуск по электробезопасности 4 группа.</p>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="team__item">
-					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-title="Роман" data-id="1.php">
-						<div class="team__pic"><img src="images/team/people-6.jpg" alt="Роман" /></div>
-						<div class="team__cell">
-							<div class="team__name">Роман</div>
-							<div class="team__text">
-								<p>Опыт работы - более 7 лет.</p>
-								<p>Допуск по электробезопасности 5 группа.</p>
-							</div>
-						</div>
-					</a>
-				</div>
-			</div>
-		</section>
-		<!-- =/team -->
-
-
-		<!-- =feedback -->
-		<div class="feedback">
-			<div class="feedback__content text-center">
-				<p class="title">ХОТИТЕ ПРОКОНСУЛЬТИРОВАТЬСЯ ?</p>
-				<div class="vcard">
-					<div class="name"><span class="category">Электрика</span> <span class="fn org">SchelkovoElectric</span></div>
-					<div class="adr">
-						 <span class="postal-code">114100</span>, <span class="country">Россия</span>, <span class="region">Московская область</span>, <span class="locality">г.Щелково</span>
-					</div>
-					<div><a href="tel:+74951471711" class="tel">+7 (495) 147-1711</a> | <a href="mailto:info@schelkovo-electric.com" class="email" title="">info@schelkovo-electric.com</a></div>
-				</div>
-				<p>Напишите Ваше сообщение, пожелание или что-нибудь доброе о нашей компании ))) Мы обязательно ответим как можно скорее</p>
-			</div>
-			<form action="#" method="post" id="feedback-form" class="feedback__form form-policy">
-				<fieldset>
-					<div class="row">
-						<input name="name" type="text" value="" class="form-control required" required placeholder="как вас зовут? *" aria-required="true" />
-						<input name="tel" type="tel" value="" class="form-control required" required placeholder="ваш номер телефона *" aria-required="true" />
-						<input name="email" type="email" value="" class="form-control required email" required placeholder="ваш e-mail *" aria-required="true" />
-					</div>
-					<div class="row">
-						<textarea name="msg" id="msg" cols="30" rows="10" placeholder="Текст вашего сообщения" class="form-control"></textarea>
-						<input type="submit" name="feedback" class="submit" value="отправить" />
-					</div>
-					<div class="qorder__form-row policy">
-						<input type="checkbox" id="checkbox2" value="" name="checkbox" checked="checked" class="user-access">
-						<label for="checkbox2">Я Согласен на обработку персональных данных и принимаю условия <a href="#.pdf" title="" target="_blank">Пользовательского соглашения</a></label>
-					</div>
-				</fieldset>
-			</form>
-		</div>
-		<!-- =/feedback -->
-<!-- InstanceEndEditable -->			
+<!-- InstanceBeginEditable name="main" -->		<!-- =breadcrumbs -->		<div class="breadcrumbs">			<ul class="B_crumbBox">				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>				<li class="B_lastCrumb"><span class="B_currentCrumb">о нас</span></li>			</ul>		</div>		<!-- =/breadcrumbs -->		<main class="text">			<h1 class="title">О НАШЕЙ КОМПАНИИ</h1>			<p>Компания "ЩелковоЭЛЕКТРИК" предоставляет полный спектр услуг по электромонтажу любой сложности в Московской области. Мы производим услуги от установки розетки до полной замены проводки в доме, квартире, коттедже, даче, магазине, офисе. </p>			<br>			<p>В нашей компании работают электрики с допусками и большим опытом работ, соблюдая все правила и нормы (СНиП). </p>			<br>			<p>Электрик на дом осуществляет выезд в города Московской области: <a href="#" title="">Щелково</a>,  <a href="#" title="">Мытищи</a>,  <a href="#" title="">Королев</a>,  <a href="#" title="">Ивантеевка</a>,  <a href="#" title="">Юбилейный</a>, <a href="">Лосино-Петровский</a>,  <a href="#" title="">Монино</a>,  <a href="#" title="">Купавна</a>,  <a href="#" title="">Ногинск</a>,  <a href="#" title="">Электросталь</a> и другие близлежащие населенные пункты.</p>			<br>			<p>Так же производятся выезд специалиста для замены проводки под ключ в частных домах, коттеджах и прочих строениях на этапе внутренних работ. </p>			<br>			<p>При планируемых больших объемах работ есть возможность вызвать электрика бесплатно - для оценки стоимости электромонтажных услуг и дальнейшего их заказа.</p>			<br>			<p>Наши <a href="#" title="">цены</a> непременно Вас порадуют!</p>			<br>			<p>Так же возможно вызвать электрика на дом в день обращения.</p>		</main>		<!-- =team -->		<section class="team">			<header>				<h2 class="title">Наша команда</h2>			</header>			<div class="flexbox">				<div class="team__item">					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-title="Алексей" data-id="1.php">						<div class="team__pic"><img src="images/team/people-1.jpg" alt="Алексей"></div>						<div class="team__cell">							<div class="team__name">Алексей</div>							<div class="team__text">								<p>Опыт работы - более 10 лет.</p>								<p>Допуск по электробезопасности 4 группа.</p>							</div>						</div>					</a>				</div>				<div class="team__item">					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-title="Максим" data-id="1.php">						<div class="team__pic"><img src="images/team/people-2.jpg" alt="Максим"></div>						<div class="team__cell">							<div class="team__name">Максим</div>							<div class="team__text">								<p>Опыт работы - более 5 лет.</p>								<p>Допуск по электробезопасности 3 группа.</p>							</div>						</div>					</a>				</div>				<div class="team__item">					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-title="Алиса" data-id="2.php">						<div class="team__pic"><img src="images/team/people-3.jpg" alt="Алиса"></div>						<div class="team__cell">							<div class="team__name">Алиса</div>							<div class="team__text">								<p>Опыт работы - более 3 лет.</p>								<p>Допуск по электробезопасности 3 группа.</p>							</div>						</div>					</a>				</div>				<div class="team__item">					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-title="Владимир" data-id="2.php">						<div class="team__pic"><img src="images/team/people-4.jpg" alt="Владимир"></div>						<div class="team__cell">							<div class="team__name">Владимир</div>							<div class="team__text">								<p>Опыт работы - более 2 лет.</p>								<p>Допуск по электробезопасности 2 группа.</p>							</div>						</div>					</a>				</div>				<div class="team__item">					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-title="Александр" data-id="1.php">						<div class="team__pic"><img src="images/team/people-5.jpg" alt="Александр"></div>						<div class="team__cell">							<div class="team__name">Александр</div>							<div class="team__text">								<p>Опыт работы - более 10 лет.</p>								<p>Допуск по электробезопасности 4 группа.</p>							</div>						</div>					</a>				</div>				<div class="team__item">					<a href="#" title="" class="team__link" data-toggle="modal" data-target="#infomodal" data-title="Роман" data-id="1.php">						<div class="team__pic"><img src="images/team/people-6.jpg" alt="Роман"></div>						<div class="team__cell">							<div class="team__name">Роман</div>							<div class="team__text">								<p>Опыт работы - более 7 лет.</p>								<p>Допуск по электробезопасности 5 группа.</p>							</div>						</div>					</a>				</div>			</div>		</section>		<!-- =/team -->		<!-- =feedback -->		<div class="feedback">			<div class="feedback__content text-center">				<p class="title">ХОТИТЕ ПРОКОНСУЛЬТИРОВАТЬСЯ ?</p>				<div class="vcard">					<div class="name"><span class="category">Электрика</span> <span class="fn org">SchelkovoElectric</span></div>					<div class="adr">						 <span class="postal-code">114100</span>, <span class="country">Россия</span>, <span class="region">Московская область</span>, <span class="locality">г.Щелково</span>					</div>					<div><a href="tel:+74951471711" class="tel">+7 (495) 147-1711</a> | <a href="mailto:info@schelkovo-electric.com" class="email" title="">info@schelkovo-electric.com</a></div>				</div>				<p>Напишите Ваше сообщение, пожелание или что-нибудь доброе о нашей компании ))) Мы обязательно ответим как можно скорее</p>			</div>			<form action="#" method="post" id="feedback-form" class="feedback__form form-policy">				<fieldset>					<div class="row">						<input name="name" type="text" value="" class="form-control required" required placeholder="как вас зовут? *" aria-required="true">						<input name="tel" type="tel" value="" class="form-control required" required placeholder="ваш номер телефона *" aria-required="true">						<input name="email" type="email" value="" class="form-control required email" required placeholder="ваш e-mail *" aria-required="true">					</div>					<div class="row">						<textarea name="msg" id="msg" cols="30" rows="10" placeholder="Текст вашего сообщения" class="form-control"></textarea>						<input type="submit" name="feedback" class="submit" value="отправить">					</div>					<div class="qorder__form-row policy">						<input type="checkbox" id="checkbox2" value="" name="checkbox" checked="checked" class="user-access">						<label for="checkbox2">Я Согласен на обработку персональных данных и принимаю условия <a href="#.pdf" title="" target="_blank">Пользовательского соглашения</a></label>					</div>				</fieldset>			</form>		</div>		<!-- =/feedback --><!-- InstanceEndEditable -->			
 	</div>
 </div>
 <!-- =/main-->
 
-<!-- InstanceBeginEditable name="EditRegion5" -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion5" --><!-- InstanceEndEditable -->
 
 
 <!-- =footer -->
@@ -375,21 +236,7 @@
 <!-- =/modal writeus -->
 
 
-<!-- InstanceBeginEditable name="EditRegion4" -->
-<!-- =modal infomodal -->
-<div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="container">
-			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>
-			<div class="modal__content">
-				<h2 class="title"></h2>
-				<div class="modal__text"></div>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- =/modal infomodal -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion4" --><!-- =modal infomodal --><div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">	<div class="modal-dialog" role="document">		<div class="container">			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>			<div class="modal__content">				<h2 class="title"></h2>				<div class="modal__text"></div>			</div>		</div>	</div></div><!-- =/modal infomodal --><!-- InstanceEndEditable -->
 
 
 <div id="outdated"></div>
@@ -405,7 +252,6 @@
 <script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
 <script src="//yastatic.net/share2/share.js"></script>
 
-<!-- InstanceBeginEditable name="EditRegion6" -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion6" --><!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
