--- a/app/articles.html
+++ b/app/articles.html
@@ -6,13 +6,19 @@
 <meta name="description" content="" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+<link rel="apple-touch-icon" sizes="180x180" href="/the_favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/the_favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/the_favicon/favicon-16x16.png">
+<link rel="manifest" href="/the_favicon/manifest.json">
+<link rel="mask-icon" href="/the_favicon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/the_favicon/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-TileImage" content="/the_favicon/mstile-144x144.png">
+<meta name="msapplication-config" content="/the_favicon/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
 
 <meta name="robots" content="noindex,nofollow" />
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Статьи</title>
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" --><title>Статьи</title><!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/template/css/jquery.bxslider.css" />
 <link rel="stylesheet" href="/template/css/styles.min.css" />
 <script src="/template/js/libs.min.js"></script>
@@ -26,8 +32,7 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]--> 
 
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 <body>
 
@@ -101,126 +106,12 @@
 <!-- =main -->
 <div class="main">
 	<div class="container">
-<!-- InstanceBeginEditable name="main" -->
-		<!-- =breadcrumbs -->
-		<div class="breadcrumbs">
-			<ul class="B_crumbBox">
-				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>
-				<li class="B_lastCrumb"><span class="B_currentCrumb">статьи</span></li>
-			</ul>
-		</div>
-		<!-- =/breadcrumbs -->
-
-		
-
-		<main class="text">
-			<h1 class="title">Статьи и Полезная информация об электрике</h1>
-			<p>Осуществляем электромонтажные работы любой сложности для физических и юридических лиц. Наши электрики готовы выехать по вызову в любое время - днём и ночью, прибудут на объект не позже чем через 2 часа после звонка. В случае аварийной ситуации экстренный выезд осуществляется в течение часа.</p>
-		</main>
-
-		<div class="articles">
-			<div class="flexbox">
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-1.jpg" alt=""></div>
-						<p class="article__title">КАК ПОМЕНЯТЬ ПОДРОЗЕТНИК</p>
-					</a>
-				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-2.jpg" alt=""></div>
-						<p class="article__title">Как правильно штробить стену</p>
-					</a>
-				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-3.jpg" alt=""></div>
-						<p class="article__title">как наростить проводку</p>
-					</a>
-				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-4.jpg" alt=""></div>
-						<p class="article__title">прокладка проводки по полу</p>
-					</a>
-				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-5.jpg" alt=""></div>
-						<p class="article__title">Замена проводки в 1 комнатной квартире</p>
-					</a>
-				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-6.jpg" alt=""></div>
-						<p class="article__title">Замена проводки в 2 комнатной квартире</p>
-					</a>
-				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-7.jpg" alt=""></div>
-						<p class="article__title">Замена проводки в 3 комнатной квартире</p>
-					</a>
-				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-8.jpg" alt=""></div>
-						<p class="article__title">Почему выбивает автомат</p>
-					</a>
-				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-9.jpg" alt=""></div>
-						<p class="article__title">Что делать если дымится розетка</p>
-					</a>
-				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-10.jpg" alt=""></div>
-						<p class="article__title">Как самому сделать проводку</p>
-					</a>
-				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-11.jpg" alt=""></div>
-						<p class="article__title">Зачем нужно заземление</p>
-					</a>
-				</div>
-				<div class="article">
-					<a href="#" title="" class="article__link">
-						<div class="article__pic"><img src="images/article-12.jpg" alt=""></div>
-						<p class="article__title">Какой кабель нужен для розеток</p>
-					</a>
-				</div>
-			</div>
-		</div>
-
-
-		<!-- =pagination -->
-		<div class="pagination">
-			<a href="#">1</a>
-			<span class="current">2</span>
-			<a href="#">3</a>
-			<a href="#">4</a>
-			<a href="#">5</a>
-		</div>
-		<!-- =/pagination -->
-
-<!-- InstanceEndEditable -->			
+<!-- InstanceBeginEditable name="main" -->		<!-- =breadcrumbs -->		<div class="breadcrumbs">			<ul class="B_crumbBox">				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>				<li class="B_lastCrumb"><span class="B_currentCrumb">статьи</span></li>			</ul>		</div>		<!-- =/breadcrumbs -->		<main class="text">			<h1 class="title">Статьи и Полезная информация об электрике</h1>			<p>Осуществляем электромонтажные работы любой сложности для физических и юридических лиц. Наши электрики готовы выехать по вызову в любое время - днём и ночью, прибудут на объект не позже чем через 2 часа после звонка. В случае аварийной ситуации экстренный выезд осуществляется в течение часа.</p>		</main>		<div class="articles">			<div class="flexbox">				<div class="article">					<a href="#" title="" class="article__link">						<div class="article__pic"><img src="images/article-1.jpg" alt=""></div>						<p class="article__title">КАК ПОМЕНЯТЬ ПОДРОЗЕТНИК</p>					</a>				</div>				<div class="article">					<a href="#" title="" class="article__link">						<div class="article__pic"><img src="images/article-2.jpg" alt=""></div>						<p class="article__title">Как правильно штробить стену</p>					</a>				</div>				<div class="article">					<a href="#" title="" class="article__link">						<div class="article__pic"><img src="images/article-3.jpg" alt=""></div>						<p class="article__title">как наростить проводку</p>					</a>				</div>				<div class="article">					<a href="#" title="" class="article__link">						<div class="article__pic"><img src="images/article-4.jpg" alt=""></div>						<p class="article__title">прокладка проводки по полу</p>					</a>				</div>				<div class="article">					<a href="#" title="" class="article__link">						<div class="article__pic"><img src="images/article-5.jpg" alt=""></div>						<p class="article__title">Замена проводки в 1 комнатной квартире</p>					</a>				</div>				<div class="article">					<a href="#" title="" class="article__link">						<div class="article__pic"><img src="images/article-6.jpg" alt=""></div>						<p class="article__title">Замена проводки в 2 комнатной квартире</p>					</a>				</div>				<div class="article">					<a href="#" title="" class="article__link">						<div class="article__pic"><img src="images/article-7.jpg" alt=""></div>						<p class="article__title">Замена проводки в 3 комнатной квартире</p>					</a>				</div>				<div class="article">					<a href="#" title="" class="article__link">						<div class="article__pic"><img src="images/article-8.jpg" alt=""></div>						<p class="article__title">Почему выбивает автомат</p>					</a>				</div>				<div class="article">					<a href="#" title="" class="article__link">						<div class="article__pic"><img src="images/article-9.jpg" alt=""></div>						<p class="article__title">Что делать если дымится розетка</p>					</a>				</div>				<div class="article">					<a href="#" title="" class="article__link">						<div class="article__pic"><img src="images/article-10.jpg" alt=""></div>						<p class="article__title">Как самому сделать проводку</p>					</a>				</div>				<div class="article">					<a href="#" title="" class="article__link">						<div class="article__pic"><img src="images/article-11.jpg" alt=""></div>						<p class="article__title">Зачем нужно заземление</p>					</a>				</div>				<div class="article">					<a href="#" title="" class="article__link">						<div class="article__pic"><img src="images/article-12.jpg" alt=""></div>						<p class="article__title">Какой кабель нужен для розеток</p>					</a>				</div>			</div>		</div>		<!-- =pagination -->		<div class="pagination">			<a href="#">1</a>			<span class="current">2</span>			<a href="#">3</a>			<a href="#">4</a>			<a href="#">5</a>		</div>		<!-- =/pagination --><!-- InstanceEndEditable -->			
 	</div>
 </div>
 <!-- =/main-->
 
-<!-- InstanceBeginEditable name="EditRegion5" -->
-<!-- =share -->
-<div class="container">
-	<div class="share flexbox text-center">
-		<p>Поделитесь с друзьями нашим проектом!</p>
-		<div class="ya-share2" data-services="collections,vkontakte,facebook,odnoklassniki,moimir,gplus,twitter,linkedin,lj,viber,whatsapp,skype,telegram"></div>
-	</div>
-</div>
-<!-- =/share -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion5" --><!-- =share --><div class="container">	<div class="share flexbox text-center">		<p>Поделитесь с друзьями нашим проектом!</p>		<div class="ya-share2" data-services="collections,vkontakte,facebook,odnoklassniki,moimir,gplus,twitter,linkedin,lj,viber,whatsapp,skype,telegram"></div>	</div></div><!-- =/share --><!-- InstanceEndEditable -->
 
 
 <!-- =footer -->
@@ -345,21 +236,7 @@
 <!-- =/modal writeus -->
 
 
-<!-- InstanceBeginEditable name="EditRegion4" -->
-<!-- =modal infomodal -->
-<div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="container">
-			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>
-			<div class="modal__content">
-				<h2 class="title"></h2>
-				<div class="modal__text"></div>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- =/modal infomodal -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion4" --><!-- =modal infomodal --><div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">	<div class="modal-dialog" role="document">		<div class="container">			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>			<div class="modal__content">				<h2 class="title"></h2>				<div class="modal__text"></div>			</div>		</div>	</div></div><!-- =/modal infomodal --><!-- InstanceEndEditable -->
 
 
 <div id="outdated"></div>
@@ -375,7 +252,6 @@
 <script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
 <script src="//yastatic.net/share2/share.js"></script>
 
-<!-- InstanceBeginEditable name="EditRegion6" -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion6" --><!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
