--- a/app/contacts.html
+++ b/app/contacts.html
@@ -6,13 +6,19 @@
 <meta name="description" content="" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+<link rel="apple-touch-icon" sizes="180x180" href="/the_favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/the_favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/the_favicon/favicon-16x16.png">
+<link rel="manifest" href="/the_favicon/manifest.json">
+<link rel="mask-icon" href="/the_favicon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/the_favicon/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-TileImage" content="/the_favicon/mstile-144x144.png">
+<meta name="msapplication-config" content="/the_favicon/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
 
 <meta name="robots" content="noindex,nofollow" />
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Контакты</title>
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" --><title>Контакты</title><!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/template/css/jquery.bxslider.css" />
 <link rel="stylesheet" href="/template/css/styles.min.css" />
 <script src="/template/js/libs.min.js"></script>
@@ -26,8 +32,7 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]--> 
 
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 <body>
 
@@ -101,68 +106,12 @@
 <!-- =main -->
 <div class="main">
 	<div class="container">
-<!-- InstanceBeginEditable name="main" -->
-		<!-- =breadcrumbs -->
-		<div class="breadcrumbs">
-			<ul class="B_crumbBox">
-				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>
-				<li class="B_lastCrumb"><span class="B_currentCrumb">контакты</span></li>
-			</ul>
-		</div>
-		<!-- =/breadcrumbs -->
-	
-		<h1 class="title">Где нас можно найти</h1>
-
-
-		<div class="vcard text-center">
-			<div class="name"><span class="category">Электрика</span> <span class="fn org">SchelkovoElectric</span></div>
-			<div class="adr">
-				 <span class="postal-code">114100</span>, <span class="country">Россия</span>, <span class="region">Московская область</span>, <span class="locality">г.Щелково</span>
-			</div>
-			<div><a href="tel:+74951471711" class="tel">+7 (495) 147-1711</a> | <a href="mailto:info@schelkovo-electric.com" class="email" title="">info@schelkovo-electric.com</a></div>
-		</div>
-	</div>
-</div>
-
-<div>
-	<div id="ymap"></div>	
-</div>
-
-<div class="main">
-	<div class="container">
-		<!-- =feedback -->
-		<div class="feedback">
-			<div class="feedback__content text-center">
-				<p>Напишите Ваше сообщение, пожелание или что-нибудь доброе о нашей компании ))) Мы обязательно ответим как можно скорее</p>
-			</div>
-			<form action="#" method="post" id="feedback-form" class="feedback__form form-policy">
-				<fieldset>
-					<div class="row">
-						<input name="name" type="text" value="" class="form-control required" required placeholder="как вас зовут? *" aria-required="true" />
-						<input name="tel" type="tel" value="" class="form-control required" required placeholder="ваш номер телефона *" aria-required="true" />
-						<input name="email" type="email" value="" class="form-control required email" required placeholder="ваш e-mail *" aria-required="true" />
-					</div>
-					<div class="row">
-						<textarea name="msg" id="msg" cols="30" rows="10" placeholder="Текст вашего сообщения" class="form-control"></textarea>
-						<input type="submit" name="feedback" class="submit" value="отправить" />
-					</div>
-					<div class="qorder__form-row policy">
-						<input type="checkbox" id="checkbox2" value="" name="checkbox" checked="checked" class="user-access">
-						<label for="checkbox2">Я Согласен на обработку персональных данных и принимаю условия <a href="#.pdf" title="" target="_blank">Пользовательского соглашения</a></label>
-					</div>
-				</fieldset>
-			</form>
-		</div>
-		<!-- =/feedback -->
-
-<!-- InstanceEndEditable -->			
+<!-- InstanceBeginEditable name="main" -->		<!-- =breadcrumbs -->		<div class="breadcrumbs">			<ul class="B_crumbBox">				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>				<li class="B_lastCrumb"><span class="B_currentCrumb">контакты</span></li>			</ul>		</div>		<!-- =/breadcrumbs -->		<h1 class="title">Где нас можно найти</h1>		<div class="vcard text-center">			<div class="name"><span class="category">Электрика</span> <span class="fn org">SchelkovoElectric</span></div>			<div class="adr">				 <span class="postal-code">114100</span>, <span class="country">Россия</span>, <span class="region">Московская область</span>, <span class="locality">г.Щелково</span>			</div>			<div><a href="tel:+74951471711" class="tel">+7 (495) 147-1711</a> | <a href="mailto:info@schelkovo-electric.com" class="email" title="">info@schelkovo-electric.com</a></div>		</div>	</div></div><div>	<div id="ymap"></div>	</div><div class="main">	<div class="container">		<!-- =feedback -->		<div class="feedback">			<div class="feedback__content text-center">				<p>Напишите Ваше сообщение, пожелание или что-нибудь доброе о нашей компании ))) Мы обязательно ответим как можно скорее</p>			</div>			<form action="#" method="post" id="feedback-form" class="feedback__form form-policy">				<fieldset>					<div class="row">						<input name="name" type="text" value="" class="form-control required" required placeholder="как вас зовут? *" aria-required="true">						<input name="tel" type="tel" value="" class="form-control required" required placeholder="ваш номер телефона *" aria-required="true">						<input name="email" type="email" value="" class="form-control required email" required placeholder="ваш e-mail *" aria-required="true">					</div>					<div class="row">						<textarea name="msg" id="msg" cols="30" rows="10" placeholder="Текст вашего сообщения" class="form-control"></textarea>						<input type="submit" name="feedback" class="submit" value="отправить">					</div>					<div class="qorder__form-row policy">						<input type="checkbox" id="checkbox2" value="" name="checkbox" checked="checked" class="user-access">						<label for="checkbox2">Я Согласен на обработку персональных данных и принимаю условия <a href="#.pdf" title="" target="_blank">Пользовательского соглашения</a></label>					</div>				</fieldset>			</form>		</div>		<!-- =/feedback --><!-- InstanceEndEditable -->			
 	</div>
 </div>
 <!-- =/main-->
 
-<!-- InstanceBeginEditable name="EditRegion5" -->
-
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion5" --><!-- InstanceEndEditable -->
 
 
 <!-- =footer -->
@@ -287,21 +236,7 @@
 <!-- =/modal writeus -->
 
 
-<!-- InstanceBeginEditable name="EditRegion4" -->
-<!-- =modal infomodal -->
-<div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="container">
-			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>
-			<div class="modal__content">
-				<h2 class="title"></h2>
-				<div class="modal__text"></div>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- =/modal infomodal -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion4" --><!-- =modal infomodal --><div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">	<div class="modal-dialog" role="document">		<div class="container">			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>			<div class="modal__content">				<h2 class="title"></h2>				<div class="modal__text"></div>			</div>		</div>	</div></div><!-- =/modal infomodal --><!-- InstanceEndEditable -->
 
 
 <div id="outdated"></div>
@@ -317,41 +252,6 @@
 <script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
 <script src="//yastatic.net/share2/share.js"></script>
 
-<!-- InstanceBeginEditable name="EditRegion6" -->
-<script src="https://api-maps.yandex.ru/2.1.26/?lang=ru_RU"></script>
-<script>
-var map;
-var myCollection;	
-ymaps.ready(function () {
-	map = new ymaps.Map('ymap', {
-		center: [55.910526, 38.017170],
-		zoom: 13
-	});
-
-	myCollection = new ymaps.GeoObjectCollection(null, {
-		preset: 'islands#redDotIcon'
-	});
-	myCollection.add(new ymaps.Placemark(
-		[55.910526, 38.017170],
-		{
-			hintContent: 'SchelkovoELECTRIC',
-			balloonContent: ''
-		}
-	));
-
-	map.behaviors.disable('scrollZoom'); 
-
-	map.geoObjects.add(myCollection);
-
-	map.events.add('click', function onMapClick(e) {
-		if(map.behaviors.isEnabled('scrollZoom')) {
-			map.events.remove('click', onMapClick);
-		} else {
-			map.behaviors.enable(['scrollZoom']);
-		}
-	});
-})
-</script>
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion6" --><script src="https://api-maps.yandex.ru/2.1.26/?lang=ru_RU"></script><script>var map;var myCollection;	ymaps.ready(function () {	map = new ymaps.Map('ymap', {		center: [55.910526, 38.017170],		zoom: 13	});	myCollection = new ymaps.GeoObjectCollection(null, {		preset: 'islands#redDotIcon'	});	myCollection.add(new ymaps.Placemark(		[55.910526, 38.017170],		{			hintContent: 'SchelkovoELECTRIC',			balloonContent: ''		}	));	map.behaviors.disable('scrollZoom'); 	map.geoObjects.add(myCollection);	map.events.add('click', function onMapClick(e) {		if(map.behaviors.isEnabled('scrollZoom')) {			map.events.remove('click', onMapClick);		} else {			map.behaviors.enable(['scrollZoom']);		}	});})</script><!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
