--- a/app/new.html
+++ b/app/new.html
@@ -6,13 +6,19 @@
 <meta name="description" content="" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+<link rel="apple-touch-icon" sizes="180x180" href="/the_favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/the_favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/the_favicon/favicon-16x16.png">
+<link rel="manifest" href="/the_favicon/manifest.json">
+<link rel="mask-icon" href="/the_favicon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/the_favicon/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-TileImage" content="/the_favicon/mstile-144x144.png">
+<meta name="msapplication-config" content="/the_favicon/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
 
 <meta name="robots" content="noindex,nofollow" />
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Новость</title>
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" --><title>Новость</title><!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/template/css/jquery.bxslider.css" />
 <link rel="stylesheet" href="/template/css/styles.min.css" />
 <script src="/template/js/libs.min.js"></script>
@@ -26,8 +32,7 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]--> 
 
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 <body>
 
@@ -101,83 +106,12 @@
 <!-- =main -->
 <div class="main">
 	<div class="container">
-<!-- InstanceBeginEditable name="main" -->
-		<!-- =breadcrumbs -->
-		<div class="breadcrumbs">
-			<ul class="B_crumbBox">
-				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>
-				<li class="B_crumb"><a href="/" title="" class="B_crumb">новости</a></li>
-				<li class="B_lastCrumb"><span class="B_currentCrumb">abb оснастит первое «анти-круизное» судно из коллекции яхт сети ritz carlton</span></li>
-			</ul>
-		</div>
-		<!-- =/breadcrumbs -->
-	
-
-
-		<main class="text">
-			<h1 class="title">abb оснастит первое «анти-круизное» судно из коллекции яхт сети ritz carlton</h1>
-
-			<p>АBB поставит движители и систему питания для головного передового судна под маркой The Ritz Carlton Yacht Collection.</p>
-			<p>190-метровое судно названо «анти-круизным», поскольку, в отличии от больших круизных судов, его вместимость составляет всего 298 пассажиров, и оно предназначено для предоставления услуг по индивидуальному заказу.</p>
-			 <br>
-
-			<p>Судно оснащено инновационным оборудованием ABB, которое позволяет эффективно расходовать энергию и дистанционно контролировать работу всех систем. Две колонки типа Azipod® D улучшают маневренность судна, а удаленная диагностика позволяет определить необходимый объем технического обслуживания.</p>
-
-			<br>
-
-			<a href="images/ship.jpg" class="fancybox"><img src="images/ship.jpg" alt=""></a>
-
-			<br> <br>
-
-			<p>Юха Коскела, руководитель направления ABB Морские суда и порты говорит: «Мы работаем в круизной индустрии около 30 лет. В течение последних 10 лет наши усилия направлены на создание удобной и надежной глобальной сети обслуживания Заказчиков, число которых постоянно растет. Сегодня наши технологии привлекают внимание новых партнеров. Мы готовы предложить высококачественное обслуживание как крупнейших круизных судов, так и роскошных яхт по всему миру».</p><br>
-
-
-			<p>Движитель типа Azipod D идеально подходит для малых судов, так как не требует больших энергозатрат. Колонки Azipod востребованы и для пассажирских судов, поскольку отказ от традиционных валолиний позволяет сократить объем бортового оборудования и освободить пространство. Явное преимущество для судов данного типа – снижение уровня вибрации. Способность двигателей поворачиваться на 360 ̊ позволяет швартоваться без помощи буксира, что актуально для судов работающих в водах Новой Англии, Карибского и Средиземного моря. Первый движитель Azipod был выпущен 25 лет назад, затем система постоянно модернизировалась, сегодня время работы двигателя более 13 миллионов часов с ресурсом 99,8%.</p><br>
-
-
-			<p>Капитан Эрик Бредх, руководитель морских работ в яхт-клубе «The Ritz-Carlton Yacht Collection», говорит: «Когда мы начали проектирование роскошной круизной яхты марки «Ritz Carlton», мы решили выбирать оборудование и системы безопасности только надежных производителей. Очевиден был выбор пропульсивного и энергетического комплекса ABB. Мы верим, что продукция этой компании соответствует высоким стандартам качества и они останутся нашими основными партнерами на долгие годы».</p><br>
-
-
-			<p>Колонки Azipod, а также все элементы средневольтной силовой установки АВВ, будут оснащены датчиками для передачи данных, которые затем отслеживаются Заказчиком и в центре ABB Ability ™. Данный мониторинг позволяет определить необходимость технического обслуживания.
-			При выборе систем автоматизации ABB на раннем этапе проектирования упрощается ввод в эксплуатацию.</p><br>
-
-
-			<p>Благодаря ABB Ability™ System 800xA экипаж имеет возможность контролировать и регулировать интегрированную работу всех систем и оборудования. На отдельном экране отображается вся информация, необходимая для более эффективного и безопасного управления судном. <br>
-			Судно будет построено на верфи «HJ Astilleros Barreras (HJB)» в Испании и передано в эксплуатацию в 2019 году. Alfonso López Loureiro, директор по продажам HJB, говорит: «Это очень интересная концепция, и мы рады, что нашим партнером стала компания ABB, зарекомендовавшая себя как надежного поставщика оборудования для аналогичных и более крупных пассажирских судов».</p>
-			<br>
-
-			<p>Использование движителя Azipod приблизительно на 10% экономичнее традиционных валолиний, также снижаются эксплуатационные затраты и объем выбросов. Гидродинамику корпуса можно легко оптимизировать, поскольку не требуются рули или другое оборудование, связанное с валолинией. Конфигурация энергосистемы позволяет оптимизировать работу дизель-генераторной установки в зависимости от потребности судна.</p>
-			<br>
-
-			<p>АBB (код ABBN на Швейцарской бирже) — мировой лидер в области электрооборудования, робототехники и механизмов движения, промышленной автоматизации и электрических сетей. Компания работает с заказчиками в сферах электроэнергетики, промышленности, транспорта и инфраструктуры. АBB создает будущее промышленной цифровизации, способствуя развитию энергетической отрасли и продвижению Четвертой промышленной революции. Более 125 лет передового опыта позволяют АBB успешно вести бизнес более чем в 100 странах при общем числе сотрудников более 132 000 человек</p>
-			<br>
-			<p>---</p>
-			<br>
-			<p><em>Источник: <a href="#">АББ в России</a></em></p>
-		</main>
-
-
-		<!-- =pagination -->
-		<div class="navnews">
-			<a href="#" class="prev">предыдущая новость</a> - <a href="#" class="next">следующая новость</a>
-		</div>
-		<!-- =pagination -->
-
-<!-- InstanceEndEditable -->			
+<!-- InstanceBeginEditable name="main" -->		<!-- =breadcrumbs -->		<div class="breadcrumbs">			<ul class="B_crumbBox">				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>				<li class="B_crumb"><a href="/" title="" class="B_crumb">новости</a></li>				<li class="B_lastCrumb"><span class="B_currentCrumb">abb оснастит первое «анти-круизное» судно из коллекции яхт сети ritz carlton</span></li>			</ul>		</div>		<!-- =/breadcrumbs -->		<main class="text">			<h1 class="title">abb оснастит первое «анти-круизное» судно из коллекции яхт сети ritz carlton</h1>			<p>АBB поставит движители и систему питания для головного передового судна под маркой The Ritz Carlton Yacht Collection.</p>			<p>190-метровое судно названо «анти-круизным», поскольку, в отличии от больших круизных судов, его вместимость составляет всего 298 пассажиров, и оно предназначено для предоставления услуг по индивидуальному заказу.</p>			 <br>			<p>Судно оснащено инновационным оборудованием ABB, которое позволяет эффективно расходовать энергию и дистанционно контролировать работу всех систем. Две колонки типа Azipod® D улучшают маневренность судна, а удаленная диагностика позволяет определить необходимый объем технического обслуживания.</p>			<br>			<a href="images/ship.jpg" class="fancybox"><img src="images/ship.jpg" alt=""></a>			<br> <br>			<p>Юха Коскела, руководитель направления ABB Морские суда и порты говорит: «Мы работаем в круизной индустрии около 30 лет. В течение последних 10 лет наши усилия направлены на создание удобной и надежной глобальной сети обслуживания Заказчиков, число которых постоянно растет. Сегодня наши технологии привлекают внимание новых партнеров. Мы готовы предложить высококачественное обслуживание как крупнейших круизных судов, так и роскошных яхт по всему миру».</p><br>			<p>Движитель типа Azipod D идеально подходит для малых судов, так как не требует больших энергозатрат. Колонки Azipod востребованы и для пассажирских судов, поскольку отказ от традиционных валолиний позволяет сократить объем бортового оборудования и освободить пространство. Явное преимущество для судов данного типа – снижение уровня вибрации. Способность двигателей поворачиваться на 360 ̊ позволяет швартоваться без помощи буксира, что актуально для судов работающих в водах Новой Англии, Карибского и Средиземного моря. Первый движитель Azipod был выпущен 25 лет назад, затем система постоянно модернизировалась, сегодня время работы двигателя более 13 миллионов часов с ресурсом 99,8%.</p><br>			<p>Капитан Эрик Бредх, руководитель морских работ в яхт-клубе «The Ritz-Carlton Yacht Collection», говорит: «Когда мы начали проектирование роскошной круизной яхты марки «Ritz Carlton», мы решили выбирать оборудование и системы безопасности только надежных производителей. Очевиден был выбор пропульсивного и энергетического комплекса ABB. Мы верим, что продукция этой компании соответствует высоким стандартам качества и они останутся нашими основными партнерами на долгие годы».</p><br>			<p>Колонки Azipod, а также все элементы средневольтной силовой установки АВВ, будут оснащены датчиками для передачи данных, которые затем отслеживаются Заказчиком и в центре ABB Ability ™. Данный мониторинг позволяет определить необходимость технического обслуживания.			При выборе систем автоматизации ABB на раннем этапе проектирования упрощается ввод в эксплуатацию.</p><br>			<p>Благодаря ABB Ability™ System 800xA экипаж имеет возможность контролировать и регулировать интегрированную работу всех систем и оборудования. На отдельном экране отображается вся информация, необходимая для более эффективного и безопасного управления судном. <br>			Судно будет построено на верфи «HJ Astilleros Barreras (HJB)» в Испании и передано в эксплуатацию в 2019 году. Alfonso López Loureiro, директор по продажам HJB, говорит: «Это очень интересная концепция, и мы рады, что нашим партнером стала компания ABB, зарекомендовавшая себя как надежного поставщика оборудования для аналогичных и более крупных пассажирских судов».</p>			<br>			<p>Использование движителя Azipod приблизительно на 10% экономичнее традиционных валолиний, также снижаются эксплуатационные затраты и объем выбросов. Гидродинамику корпуса можно легко оптимизировать, поскольку не требуются рули или другое оборудование, связанное с валолинией. Конфигурация энергосистемы позволяет оптимизировать работу дизель-генераторной установки в зависимости от потребности судна.</p>			<br>			<p>АBB (код ABBN на Швейцарской бирже) — мировой лидер в области электрооборудования, робототехники и механизмов движения, промышленной автоматизации и электрических сетей. Компания работает с заказчиками в сферах электроэнергетики, промышленности, транспорта и инфраструктуры. АBB создает будущее промышленной цифровизации, способствуя развитию энергетической отрасли и продвижению Четвертой промышленной революции. Более 125 лет передового опыта позволяют АBB успешно вести бизнес более чем в 100 странах при общем числе сотрудников более 132 000 человек</p>			<br>			<p>---</p>			<br>			<p><em>Источник: <a href="#">АББ в России</a></em></p>		</main>		<!-- =pagination -->		<div class="navnews">			<a href="#" class="prev">предыдущая новость</a> - <a href="#" class="next">следующая новость</a>		</div>		<!-- =pagination --><!-- InstanceEndEditable -->			
 	</div>
 </div>
 <!-- =/main-->
 
-<!-- InstanceBeginEditable name="EditRegion5" -->
-<!-- =share -->
-<div class="container">
-	<div class="share flexbox text-center">
-		<p>Поделитесь с друзьями нашим проектом!</p>
-		<div class="ya-share2" data-services="collections,vkontakte,facebook,odnoklassniki,moimir,gplus,twitter,linkedin,lj,viber,whatsapp,skype,telegram"></div>
-	</div>
-</div>
-<!-- =/share -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion5" --><!-- =share --><div class="container">	<div class="share flexbox text-center">		<p>Поделитесь с друзьями нашим проектом!</p>		<div class="ya-share2" data-services="collections,vkontakte,facebook,odnoklassniki,moimir,gplus,twitter,linkedin,lj,viber,whatsapp,skype,telegram"></div>	</div></div><!-- =/share --><!-- InstanceEndEditable -->
 
 
 <!-- =footer -->
@@ -302,21 +236,7 @@
 <!-- =/modal writeus -->
 
 
-<!-- InstanceBeginEditable name="EditRegion4" -->
-<!-- =modal infomodal -->
-<div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="container">
-			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>
-			<div class="modal__content">
-				<h2 class="title"></h2>
-				<div class="modal__text"></div>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- =/modal infomodal -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion4" --><!-- =modal infomodal --><div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">	<div class="modal-dialog" role="document">		<div class="container">			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>			<div class="modal__content">				<h2 class="title"></h2>				<div class="modal__text"></div>			</div>		</div>	</div></div><!-- =/modal infomodal --><!-- InstanceEndEditable -->
 
 
 <div id="outdated"></div>
@@ -332,7 +252,6 @@
 <script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
 <script src="//yastatic.net/share2/share.js"></script>
 
-<!-- InstanceBeginEditable name="EditRegion6" -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion6" --><!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
