--- a/app/news.html
+++ b/app/news.html
@@ -6,13 +6,19 @@
 <meta name="description" content="" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+<link rel="apple-touch-icon" sizes="180x180" href="/the_favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/the_favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/the_favicon/favicon-16x16.png">
+<link rel="manifest" href="/the_favicon/manifest.json">
+<link rel="mask-icon" href="/the_favicon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/the_favicon/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-TileImage" content="/the_favicon/mstile-144x144.png">
+<meta name="msapplication-config" content="/the_favicon/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
 
 <meta name="robots" content="noindex,nofollow" />
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Новости</title>
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" --><title>Новости</title><!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/template/css/jquery.bxslider.css" />
 <link rel="stylesheet" href="/template/css/styles.min.css" />
 <script src="/template/js/libs.min.js"></script>
@@ -26,8 +32,7 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]--> 
 
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 <body>
 
@@ -101,138 +106,12 @@
 <!-- =main -->
 <div class="main">
 	<div class="container">
-<!-- InstanceBeginEditable name="main" -->
-		<!-- =breadcrumbs -->
-		<div class="breadcrumbs">
-			<ul class="B_crumbBox">
-				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>
-				<li class="B_lastCrumb"><span class="B_currentCrumb">новости</span></li>
-			</ul>
-		</div>
-		<!-- =/breadcrumbs -->
-		
-
-		<main class="text">
-			<h1 class="title">Новостная лента компании</h1>
-			<p>Достаточно часто у домовладельцев, которые не являются профессиональными электриками, возникают вопросы, касающиеся использования такого энергоресурса как электричество. Вот и вынуждены они искать ответы на вопросы по электрике в самых разнообразных источниках, успешно функционирующих во всемирной сети Интернет. Но, невзирая на большое разнообразие строительно-информационных ресурсов и ресурсов, посвященных сугубо электротехнике, очень часто поиски ответов заканчиваются неудачей.</p>
-		</main>
-
-		<div class="listnews">
-			<div class="flexbox">
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-09-15</time>
-						<h3 class="news__title">Новые контроллеры WAGO с поддержкой Profibus DP Master</h3>
-						<p><a href="new.html" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-09-13</time>
-						<h3 class="news__title">Metra - система кабельных каналов и мини-каналов</h3>
-						<p><a href="new.html" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-09-11</time>
-						<h3 class="news__title">ABB оснастит первое «анти-круизное» судно из коллекции яхт сети Ritz Carlton </h3>
-						<p><a href="new.html" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-09-08</time>
-						<h3 class="news__title">Открытие продаж нового модуля IFM Modbus Interface - LV434000</h3>
-						<p><a href="new.html" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-09-06</time>
-						<h3 class="news__title">ABB впервые проводит День инноваций и технологий </h3>
-						<p><a href="new.html" title="">День инноваций и технологий в ABB. Впервые компания ABB пригласила инвесторов, журналистов ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-09-04</time>
-						<h3 class="news__title">Программируемые логические контроллеры в программе поставок ПРОСОФТ</h3>
-						<p><a href="new.html" title="">Традиционный интерес аудитории вызывают презентации оборудования Advantech. Не последнюю ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-09-01</time>
-						<h3 class="news__title">Источники питания WAGO EPSITRON в двухфазной и трехфазной версиях</h3>
-						<p><a href="new.html" title="">В дополнение к своим проверенным однофазным источникам питания серии EPSITRON, компания WAGO ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-08-30</time>
-						<h3 class="news__title">Новые аксессуары к клеммам WAGO: пружинные зажимы для экрана</h3>
-						<p><a href="new.html" title="">Новое поколение пружинных зажимов делают использование разработанной WAGO ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-08-28</time>
-						<h3 class="news__title">Проведи «Яркие каникулы co Schneider Electric»!</h3>
-						<p><a href="new.html" title="">Schneider Electric вновь приглашает дизайнеров интерьера воплотить свои уникальные идеи в ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-08-25</time>
-						<h3 class="news__title">Изолента от Schneider Electric: гид по продукту </h3>
-						<p><a href="new.html" title="">Современная электроизоляционная лента или изолента из поливинилхлорида (ПВХ) ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-08-23</time>
-						<h3 class="news__title">Группа Legrand примет участие в ЭКСПО 1520</h3>
-						<p><a href="new.html" title="">Группа Legrand совместно со своим партнером – ГК «Спектр» – примет участие в VI Международном ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-08-21</time>
-						<h3 class="news__title">АББ выводит концепцию «умного» дома на новый уровень благодаря решениям Amazon и Sonos</h3>
-						<p><a href="new.html" title="">Сегодня в ходе IFA, крупнейшей в Европе выставки потребительской электроники, которая ...</a></p>
-					</div>
-				</div>
-
-			</div>
-		</div>
-
-
-		<!-- =pagination -->
-		<div class="pagination">
-			<a href="#">1</a>
-			<span class="current">2</span>
-			<a href="#">3</a>
-			<a href="#">4</a>
-			<a href="#">5</a>
-		</div>
-		<!-- =/pagination -->
-
-<!-- InstanceEndEditable -->			
+<!-- InstanceBeginEditable name="main" -->		<!-- =breadcrumbs -->		<div class="breadcrumbs">			<ul class="B_crumbBox">				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>				<li class="B_lastCrumb"><span class="B_currentCrumb">новости</span></li>			</ul>		</div>		<!-- =/breadcrumbs -->		<main class="text">			<h1 class="title">Новостная лента компании</h1>			<p>Достаточно часто у домовладельцев, которые не являются профессиональными электриками, возникают вопросы, касающиеся использования такого энергоресурса как электричество. Вот и вынуждены они искать ответы на вопросы по электрике в самых разнообразных источниках, успешно функционирующих во всемирной сети Интернет. Но, невзирая на большое разнообразие строительно-информационных ресурсов и ресурсов, посвященных сугубо электротехнике, очень часто поиски ответов заканчиваются неудачей.</p>		</main>		<div class="listnews">			<div class="flexbox">				<div class="news">					<div class="news__item">						<time class="date">2017-09-15</time>						<h3 class="news__title">Новые контроллеры WAGO с поддержкой Profibus DP Master</h3>						<p><a href="new.html" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>					</div>				</div>				<div class="news">					<div class="news__item">						<time class="date">2017-09-13</time>						<h3 class="news__title">Metra - система кабельных каналов и мини-каналов</h3>						<p><a href="new.html" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>					</div>				</div>				<div class="news">					<div class="news__item">						<time class="date">2017-09-11</time>						<h3 class="news__title">ABB оснастит первое «анти-круизное» судно из коллекции яхт сети Ritz Carlton </h3>						<p><a href="new.html" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>					</div>				</div>				<div class="news">					<div class="news__item">						<time class="date">2017-09-08</time>						<h3 class="news__title">Открытие продаж нового модуля IFM Modbus Interface - LV434000</h3>						<p><a href="new.html" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>					</div>				</div>				<div class="news">					<div class="news__item">						<time class="date">2017-09-06</time>						<h3 class="news__title">ABB впервые проводит День инноваций и технологий </h3>						<p><a href="new.html" title="">День инноваций и технологий в ABB. Впервые компания ABB пригласила инвесторов, журналистов ...</a></p>					</div>				</div>				<div class="news">					<div class="news__item">						<time class="date">2017-09-04</time>						<h3 class="news__title">Программируемые логические контроллеры в программе поставок ПРОСОФТ</h3>						<p><a href="new.html" title="">Традиционный интерес аудитории вызывают презентации оборудования Advantech. Не последнюю ...</a></p>					</div>				</div>				<div class="news">					<div class="news__item">						<time class="date">2017-09-01</time>						<h3 class="news__title">Источники питания WAGO EPSITRON в двухфазной и трехфазной версиях</h3>						<p><a href="new.html" title="">В дополнение к своим проверенным однофазным источникам питания серии EPSITRON, компания WAGO ...</a></p>					</div>				</div>				<div class="news">					<div class="news__item">						<time class="date">2017-08-30</time>						<h3 class="news__title">Новые аксессуары к клеммам WAGO: пружинные зажимы для экрана</h3>						<p><a href="new.html" title="">Новое поколение пружинных зажимов делают использование разработанной WAGO ...</a></p>					</div>				</div>				<div class="news">					<div class="news__item">						<time class="date">2017-08-28</time>						<h3 class="news__title">Проведи «Яркие каникулы co Schneider Electric»!</h3>						<p><a href="new.html" title="">Schneider Electric вновь приглашает дизайнеров интерьера воплотить свои уникальные идеи в ...</a></p>					</div>				</div>				<div class="news">					<div class="news__item">						<time class="date">2017-08-25</time>						<h3 class="news__title">Изолента от Schneider Electric: гид по продукту </h3>						<p><a href="new.html" title="">Современная электроизоляционная лента или изолента из поливинилхлорида (ПВХ) ...</a></p>					</div>				</div>				<div class="news">					<div class="news__item">						<time class="date">2017-08-23</time>						<h3 class="news__title">Группа Legrand примет участие в ЭКСПО 1520</h3>						<p><a href="new.html" title="">Группа Legrand совместно со своим партнером – ГК «Спектр» – примет участие в VI Международном ...</a></p>					</div>				</div>				<div class="news">					<div class="news__item">						<time class="date">2017-08-21</time>						<h3 class="news__title">АББ выводит концепцию «умного» дома на новый уровень благодаря решениям Amazon и Sonos</h3>						<p><a href="new.html" title="">Сегодня в ходе IFA, крупнейшей в Европе выставки потребительской электроники, которая ...</a></p>					</div>				</div>			</div>		</div>		<!-- =pagination -->		<div class="pagination">			<a href="#">1</a>			<span class="current">2</span>			<a href="#">3</a>			<a href="#">4</a>			<a href="#">5</a>		</div>		<!-- =/pagination --><!-- InstanceEndEditable -->			
 	</div>
 </div>
 <!-- =/main-->
 
-<!-- InstanceBeginEditable name="EditRegion5" -->
-<!-- =share -->
-<div class="container">
-	<div class="share flexbox text-center">
-		<p>Поделитесь с друзьями нашим проектом!</p>
-		<div class="ya-share2" data-services="collections,vkontakte,facebook,odnoklassniki,moimir,gplus,twitter,linkedin,lj,viber,whatsapp,skype,telegram"></div>
-	</div>
-</div>
-<!-- =/share -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion5" --><!-- =share --><div class="container">	<div class="share flexbox text-center">		<p>Поделитесь с друзьями нашим проектом!</p>		<div class="ya-share2" data-services="collections,vkontakte,facebook,odnoklassniki,moimir,gplus,twitter,linkedin,lj,viber,whatsapp,skype,telegram"></div>	</div></div><!-- =/share --><!-- InstanceEndEditable -->
 
 
 <!-- =footer -->
@@ -357,21 +236,7 @@
 <!-- =/modal writeus -->
 
 
-<!-- InstanceBeginEditable name="EditRegion4" -->
-<!-- =modal infomodal -->
-<div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="container">
-			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>
-			<div class="modal__content">
-				<h2 class="title"></h2>
-				<div class="modal__text"></div>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- =/modal infomodal -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion4" --><!-- =modal infomodal --><div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">	<div class="modal-dialog" role="document">		<div class="container">			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>			<div class="modal__content">				<h2 class="title"></h2>				<div class="modal__text"></div>			</div>		</div>	</div></div><!-- =/modal infomodal --><!-- InstanceEndEditable -->
 
 
 <div id="outdated"></div>
@@ -387,7 +252,6 @@
 <script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
 <script src="//yastatic.net/share2/share.js"></script>
 
-<!-- InstanceBeginEditable name="EditRegion6" -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion6" --><!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
