--- a/app/our-works-photocard.html
+++ b/app/our-works-photocard.html
@@ -6,13 +6,19 @@
 <meta name="description" content="" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+<link rel="apple-touch-icon" sizes="180x180" href="/the_favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/the_favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/the_favicon/favicon-16x16.png">
+<link rel="manifest" href="/the_favicon/manifest.json">
+<link rel="mask-icon" href="/the_favicon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/the_favicon/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-TileImage" content="/the_favicon/mstile-144x144.png">
+<meta name="msapplication-config" content="/the_favicon/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
 
 <meta name="robots" content="noindex,nofollow" />
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Наши работы - Фото</title>
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" --><title>Наши работы - Фото</title><!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/template/css/jquery.bxslider.css" />
 <link rel="stylesheet" href="/template/css/styles.min.css" />
 <script src="/template/js/libs.min.js"></script>
@@ -26,8 +32,7 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]--> 
 
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 <body>
 
@@ -101,93 +106,12 @@
 <!-- =main -->
 <div class="main">
 	<div class="container">
-<!-- InstanceBeginEditable name="main" -->
-		<!-- =breadcrumbs -->
-		<div class="breadcrumbs">
-			<ul class="B_crumbBox">
-				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>
-				<li class="B_crumb"><a href="/" title="" class="B_crumb">наши работы</a></li>
-				<li class="B_lastCrumb"><span class="B_currentCrumb">проводка в квартире под ключ</span></li>
-			</ul>
-		</div>
-		<!-- =/breadcrumbs -->
-		
-
-		<h1 class="title">проводка в квартире под ключ</h1>
-		<div class="text">
-			Осуществляем электромонтажные работы любой сложности для физических и юридических лиц. Наши электрики готовы выехать по вызову в любое время - днём и ночью, прибудут на объект не позже чем через 2 часа после звонка. В случае аварийной ситуации экстренный выезд осуществляется в течение часа.
-		</div>
-
-		<div class="gallery">
-			<div class="flexbox">
-				<div class="gallery__item">
-					<a href="images/big-1.jpg" data-fancybox="gallery" title="">
-						<img src="images/works/work-6.jpg" alt="" />
-					</a>
-				</div>
-				<div class="gallery__item">
-					<a href="tmp/bgerwlzPQCQ.jpg" data-fancybox="gallery" title="">
-						<img src="images/works/work-7.jpg" alt="" />
-					</a>
-				</div>
-				<div class="gallery__item">
-					<a href="tmp/F1NHuB1isFo.jpg" data-fancybox="gallery" title="">
-						<img src="images/works/work-8.jpg" alt="" />
-					</a>
-				</div>
-				<div class="gallery__item">
-					<a href="tmp/full_g_003.jpg" data-fancybox="gallery" title="">
-						<img src="images/works/work-9.jpg" alt="" />
-					</a>
-				</div>
-				<div class="gallery__item">
-					<a href="tmp/full_g_005.jpg" data-fancybox="gallery" title="">
-						<img src="images/works/work-10.jpg" alt="" />
-					</a>
-				</div>
-				<div class="gallery__item">
-					<a href="tmp/F1NHuB1isFo.jpg" data-fancybox="gallery" title="">
-						<img src="images/works/work-11.jpg" alt="" />
-					</a>
-				</div>
-				<div class="gallery__item">
-					<a href="tmp/full_g_005.jpg" data-fancybox="gallery" title="">
-						<img src="images/works/work-12.jpg" alt="" />
-					</a>
-				</div>
-				<div class="gallery__item">
-					<a href="tmp/F1NHuB1isFo.jpg" data-fancybox="gallery" title="">
-						<img src="images/works/work-13.jpg" alt="" />
-					</a>
-				</div>
-				<div class="gallery__item">
-					<a href="tmp/full_g_005.jpg" data-fancybox="gallery" title="">
-						<img src="images/works/work-14.jpg" alt="" />
-					</a>
-				</div>
-			</div>
-		</div>
-
-		<div class="text">
-			<p>Осуществляем электромонтажные работы любой сложности для физических и юридических лиц. Наши электрики готовы выехать по вызову в любое время — днём и ночью, прибудут на объект не позже чем через 2 часа после звонка. В случае аварийной ситуации экстренный выезд осуществляется в течение часа.</p>
-			<p>Опыт и знания позволяют нам не допускать ошибок в работе и избегать лишних затрат, поэтому мы можем позволить себе низкие цены на электромонтаж и 3 года гарантии на любой вид услуг по электрике. С каждым заказчиком заключается договор, в котором прописывается график работ и окончательная стоимость.</p>
-		</div>
-
-<!-- InstanceEndEditable -->			
+<!-- InstanceBeginEditable name="main" -->		<!-- =breadcrumbs -->		<div class="breadcrumbs">			<ul class="B_crumbBox">				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>				<li class="B_crumb"><a href="/" title="" class="B_crumb">наши работы</a></li>				<li class="B_lastCrumb"><span class="B_currentCrumb">проводка в квартире под ключ</span></li>			</ul>		</div>		<!-- =/breadcrumbs -->		<h1 class="title">проводка в квартире под ключ</h1>		<div class="text">			Осуществляем электромонтажные работы любой сложности для физических и юридических лиц. Наши электрики готовы выехать по вызову в любое время - днём и ночью, прибудут на объект не позже чем через 2 часа после звонка. В случае аварийной ситуации экстренный выезд осуществляется в течение часа.		</div>		<div class="gallery">			<div class="flexbox">				<div class="gallery__item">					<a href="images/big-1.jpg" data-fancybox="gallery" title="">						<img src="images/works/work-6.jpg" alt="">					</a>				</div>				<div class="gallery__item">					<a href="tmp/bgerwlzPQCQ.jpg" data-fancybox="gallery" title="">						<img src="images/works/work-7.jpg" alt="">					</a>				</div>				<div class="gallery__item">					<a href="tmp/F1NHuB1isFo.jpg" data-fancybox="gallery" title="">						<img src="images/works/work-8.jpg" alt="">					</a>				</div>				<div class="gallery__item">					<a href="tmp/full_g_003.jpg" data-fancybox="gallery" title="">						<img src="images/works/work-9.jpg" alt="">					</a>				</div>				<div class="gallery__item">					<a href="tmp/full_g_005.jpg" data-fancybox="gallery" title="">						<img src="images/works/work-10.jpg" alt="">					</a>				</div>				<div class="gallery__item">					<a href="tmp/F1NHuB1isFo.jpg" data-fancybox="gallery" title="">						<img src="images/works/work-11.jpg" alt="">					</a>				</div>				<div class="gallery__item">					<a href="tmp/full_g_005.jpg" data-fancybox="gallery" title="">						<img src="images/works/work-12.jpg" alt="">					</a>				</div>				<div class="gallery__item">					<a href="tmp/F1NHuB1isFo.jpg" data-fancybox="gallery" title="">						<img src="images/works/work-13.jpg" alt="">					</a>				</div>				<div class="gallery__item">					<a href="tmp/full_g_005.jpg" data-fancybox="gallery" title="">						<img src="images/works/work-14.jpg" alt="">					</a>				</div>			</div>		</div>		<div class="text">			<p>Осуществляем электромонтажные работы любой сложности для физических и юридических лиц. Наши электрики готовы выехать по вызову в любое время — днём и ночью, прибудут на объект не позже чем через 2 часа после звонка. В случае аварийной ситуации экстренный выезд осуществляется в течение часа.</p>			<p>Опыт и знания позволяют нам не допускать ошибок в работе и избегать лишних затрат, поэтому мы можем позволить себе низкие цены на электромонтаж и 3 года гарантии на любой вид услуг по электрике. С каждым заказчиком заключается договор, в котором прописывается график работ и окончательная стоимость.</p>		</div><!-- InstanceEndEditable -->			
 	</div>
 </div>
 <!-- =/main-->
 
-<!-- InstanceBeginEditable name="EditRegion5" -->
-<!-- =share -->
-<div class="container">
-	<div class="share flexbox text-center">
-		<p>Поделитесь с друзьями нашим проектом!</p>
-		<div class="ya-share2" data-services="collections,vkontakte,facebook,odnoklassniki,moimir,gplus,twitter,linkedin,lj,viber,whatsapp,skype,telegram"></div>
-	</div>
-</div>
-<!-- =/share -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion5" --><!-- =share --><div class="container">	<div class="share flexbox text-center">		<p>Поделитесь с друзьями нашим проектом!</p>		<div class="ya-share2" data-services="collections,vkontakte,facebook,odnoklassniki,moimir,gplus,twitter,linkedin,lj,viber,whatsapp,skype,telegram"></div>	</div></div><!-- =/share --><!-- InstanceEndEditable -->
 
 
 <!-- =footer -->
@@ -312,21 +236,7 @@
 <!-- =/modal writeus -->
 
 
-<!-- InstanceBeginEditable name="EditRegion4" -->
-<!-- =modal infomodal -->
-<div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="container">
-			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>
-			<div class="modal__content">
-				<h2 class="title"></h2>
-				<div class="modal__text"></div>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- =/modal infomodal -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion4" --><!-- =modal infomodal --><div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">	<div class="modal-dialog" role="document">		<div class="container">			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>			<div class="modal__content">				<h2 class="title"></h2>				<div class="modal__text"></div>			</div>		</div>	</div></div><!-- =/modal infomodal --><!-- InstanceEndEditable -->
 
 
 <div id="outdated"></div>
@@ -342,7 +252,6 @@
 <script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
 <script src="//yastatic.net/share2/share.js"></script>
 
-<!-- InstanceBeginEditable name="EditRegion6" -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion6" --><!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
