--- a/app/services.html
+++ b/app/services.html
@@ -6,13 +6,19 @@
 <meta name="description" content="" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+<link rel="apple-touch-icon" sizes="180x180" href="/the_favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/the_favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/the_favicon/favicon-16x16.png">
+<link rel="manifest" href="/the_favicon/manifest.json">
+<link rel="mask-icon" href="/the_favicon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/the_favicon/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-TileImage" content="/the_favicon/mstile-144x144.png">
+<meta name="msapplication-config" content="/the_favicon/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
 
 <meta name="robots" content="noindex,nofollow" />
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Услуги</title>
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" --><title>Услуги</title><!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/template/css/jquery.bxslider.css" />
 <link rel="stylesheet" href="/template/css/styles.min.css" />
 <script src="/template/js/libs.min.js"></script>
@@ -26,8 +32,7 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]--> 
 
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 <body>
 
@@ -101,73 +106,12 @@
 <!-- =main -->
 <div class="main">
 	<div class="container">
-<!-- InstanceBeginEditable name="main" -->
-		<!-- =breadcrumbs -->
-		<div class="breadcrumbs">
-			<ul class="B_crumbBox">
-				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>
-				<li class="B_lastCrumb"><span class="B_currentCrumb">услуги</span></li>
-			</ul>
-		</div>
-		<!-- =/breadcrumbs -->
-		
-
-		<section class="allservices">
-			<header>
-				<h1>Услуги нашей компании</h1>
-			</header>
-			<div class="text">
-				<p>Электромонтажные работы в небольшой современном гараже частного дома, с кухней, комнатой отдыха и сан.узлом. Черновой монтаж производился не мной, мне лишь досталось "счастье" доделывать чистовой монтаж. Подрозетники яйцом или не в один уровень, провода коротыши торчащие из стен, потолка и подрозетников, облицовка в виде керамогранита, которая местами мешала нормальной установке розеток и выключателей.</p>					
-			</div>
-
-			<div class="allservices__item" style="background-image: url(images/service-work.jpg);">
-				<a href="#" title="" class="allservices__link">
-					<h2 class="allservices__item-title">Электромонтажные работы</h2>
-					<p>Осуществляем электромонтажные работы любой сложности для физических и юридических лиц. Наши электрики готовы выехать по вызову в любое время — днём и ночью, прибудут на объект не позже чем через 2 часа после звонка. В случае аварийной ситуации экстренный выезд осуществляется в течение часа. Опыт и знания позволяют нам не допускать ошибок в работе и избегать лишних затрат, поэтому мы можем позволить себе низкие цены на электромонтаж и 3 года гарантии.</p>
-				</a>
-			</div>
-			<div class="allservices__item" style="background-image: url(images/service-montage.jpg);">
-				<a href="#" title="" class="allservices__link">
-					<h2 class="allservices__item-title">Монтаж электропроводки</h2>
-					<p>Предлагаем свои услуги по монтажу электропроводки «под ключ» для квартир и частных домов, коттеджей, офисов, производственных помещений: от разработки проекта и составления сметы до запуска системы в работу и установки бытовой техники. В штате компании только профессиональные электрики с профильным образованием и стажем работы от 5 лет. В результате вы получаете полностью рабочую, готовую к эксплуатации и безопасную сеть с гарантией на 3 года.</p>
-				</a>
-			</div>
-			<div class="allservices__item" style="background-image: url(images/service-wiring.jpg);">
-				<a href="#" title="" class="allservices__link">
-					<h2 class="allservices__item-title">Разводка электрики</h2>
-					<p>Электромонтаж в многоквартирных и частных домах, коттеджах имеет некоторые существенные различия, которые важно учитывать при разводке электрики. Чтобы обеспечить разводку проводки в загородном доме, особняке или на даче, важно учитывать характеристики систем безопасности, установленных на придомовой территории; характеристики наружного освещения, датчиков движения и т. д.</p>
-				</a>
-			</div>
-			<div class="allservices__item" style="background-image: url(images/service-replace.jpg);">
-				<a href="#" title="" class="allservices__link">
-					<h2 class="allservices__item-title">Замена проводки</h2>
-					<p>Поможем поменять проводку независимо от сложности задачи, объёмов работ и давности последнего обновления электросистемы. Производим замену электропроводки и всей электрики с гарантией на 3 года. Обеспечим замену электросетей в любой квартире, независимо от площади и состояния. Все электрики имеют необходимые документы и допуски для работы, профильное образование и опыт работы не менее 5 лет.</p>
-				</a>
-			</div>
-			<div class="allservices__item" style="background-image: url(images/service-repairs.jpg);">
-				<a href="#" title="" class="allservices__link">
-					<h2 class="allservices__item-title">Ремонт электрики</h2>
-					<p>Предоставляем услуги по ремонту электрики в частных домах и квартирах и комплексному ремонту электропроводки на крупных промышленных, производственных объектах. Опыт и профессиональные навыки наших электриков позволяют избегать лишних расходов на исправление ошибок при электромонтаже, благодаря чему работы проводятся быстрее и стоимость услуг остаётся доступной. При особо крупных заказах и постоянным клиентам предоставляются скидки.</p>
-				</a>
-			</div>
-		</section>
-
-
-<!-- InstanceEndEditable -->			
+<!-- InstanceBeginEditable name="main" -->		<!-- =breadcrumbs -->		<div class="breadcrumbs">			<ul class="B_crumbBox">				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>				<li class="B_lastCrumb"><span class="B_currentCrumb">услуги</span></li>			</ul>		</div>		<!-- =/breadcrumbs -->		<section class="allservices">			<header>				<h1>Услуги нашей компании</h1>			</header>			<div class="text">				<p>Электромонтажные работы в небольшой современном гараже частного дома, с кухней, комнатой отдыха и сан.узлом. Черновой монтаж производился не мной, мне лишь досталось "счастье" доделывать чистовой монтаж. Подрозетники яйцом или не в один уровень, провода коротыши торчащие из стен, потолка и подрозетников, облицовка в виде керамогранита, которая местами мешала нормальной установке розеток и выключателей.</p>								</div>			<div class="allservices__item" style="background-image: url(images/service-work.jpg);">				<a href="#" title="" class="allservices__link">					<h2 class="allservices__item-title">Электромонтажные работы</h2>					<p>Осуществляем электромонтажные работы любой сложности для физических и юридических лиц. Наши электрики готовы выехать по вызову в любое время — днём и ночью, прибудут на объект не позже чем через 2 часа после звонка. В случае аварийной ситуации экстренный выезд осуществляется в течение часа. Опыт и знания позволяют нам не допускать ошибок в работе и избегать лишних затрат, поэтому мы можем позволить себе низкие цены на электромонтаж и 3 года гарантии.</p>				</a>			</div>			<div class="allservices__item" style="background-image: url(images/service-montage.jpg);">				<a href="#" title="" class="allservices__link">					<h2 class="allservices__item-title">Монтаж электропроводки</h2>					<p>Предлагаем свои услуги по монтажу электропроводки «под ключ» для квартир и частных домов, коттеджей, офисов, производственных помещений: от разработки проекта и составления сметы до запуска системы в работу и установки бытовой техники. В штате компании только профессиональные электрики с профильным образованием и стажем работы от 5 лет. В результате вы получаете полностью рабочую, готовую к эксплуатации и безопасную сеть с гарантией на 3 года.</p>				</a>			</div>			<div class="allservices__item" style="background-image: url(images/service-wiring.jpg);">				<a href="#" title="" class="allservices__link">					<h2 class="allservices__item-title">Разводка электрики</h2>					<p>Электромонтаж в многоквартирных и частных домах, коттеджах имеет некоторые существенные различия, которые важно учитывать при разводке электрики. Чтобы обеспечить разводку проводки в загородном доме, особняке или на даче, важно учитывать характеристики систем безопасности, установленных на придомовой территории; характеристики наружного освещения, датчиков движения и т. д.</p>				</a>			</div>			<div class="allservices__item" style="background-image: url(images/service-replace.jpg);">				<a href="#" title="" class="allservices__link">					<h2 class="allservices__item-title">Замена проводки</h2>					<p>Поможем поменять проводку независимо от сложности задачи, объёмов работ и давности последнего обновления электросистемы. Производим замену электропроводки и всей электрики с гарантией на 3 года. Обеспечим замену электросетей в любой квартире, независимо от площади и состояния. Все электрики имеют необходимые документы и допуски для работы, профильное образование и опыт работы не менее 5 лет.</p>				</a>			</div>			<div class="allservices__item" style="background-image: url(images/service-repairs.jpg);">				<a href="#" title="" class="allservices__link">					<h2 class="allservices__item-title">Ремонт электрики</h2>					<p>Предоставляем услуги по ремонту электрики в частных домах и квартирах и комплексному ремонту электропроводки на крупных промышленных, производственных объектах. Опыт и профессиональные навыки наших электриков позволяют избегать лишних расходов на исправление ошибок при электромонтаже, благодаря чему работы проводятся быстрее и стоимость услуг остаётся доступной. При особо крупных заказах и постоянным клиентам предоставляются скидки.</p>				</a>			</div>		</section><!-- InstanceEndEditable -->			
 	</div>
 </div>
 <!-- =/main-->
 
-<!-- InstanceBeginEditable name="EditRegion5" -->
-<!-- =share -->
-<div class="container">
-	<div class="share flexbox text-center">
-		<p>Поделитесь с друзьями нашим проектом!</p>
-		<div class="ya-share2" data-services="collections,vkontakte,facebook,odnoklassniki,moimir,gplus,twitter,linkedin,lj,viber,whatsapp,skype,telegram"></div>
-	</div>
-</div>
-<!-- =/share -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion5" --><!-- =share --><div class="container">	<div class="share flexbox text-center">		<p>Поделитесь с друзьями нашим проектом!</p>		<div class="ya-share2" data-services="collections,vkontakte,facebook,odnoklassniki,moimir,gplus,twitter,linkedin,lj,viber,whatsapp,skype,telegram"></div>	</div></div><!-- =/share --><!-- InstanceEndEditable -->
 
 
 <!-- =footer -->
@@ -292,21 +236,7 @@
 <!-- =/modal writeus -->
 
 
-<!-- InstanceBeginEditable name="EditRegion4" -->
-<!-- =modal infomodal -->
-<div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="container">
-			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>
-			<div class="modal__content">
-				<h2 class="title"></h2>
-				<div class="modal__text"></div>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- =/modal infomodal -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion4" --><!-- =modal infomodal --><div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">	<div class="modal-dialog" role="document">		<div class="container">			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>			<div class="modal__content">				<h2 class="title"></h2>				<div class="modal__text"></div>			</div>		</div>	</div></div><!-- =/modal infomodal --><!-- InstanceEndEditable -->
 
 
 <div id="outdated"></div>
@@ -322,7 +252,6 @@
 <script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
 <script src="//yastatic.net/share2/share.js"></script>
 
-<!-- InstanceBeginEditable name="EditRegion6" -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion6" --><!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
