--- a/app/reviews.html
+++ b/app/reviews.html
@@ -6,13 +6,19 @@
 <meta name="description" content="" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+<link rel="apple-touch-icon" sizes="180x180" href="/the_favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/the_favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/the_favicon/favicon-16x16.png">
+<link rel="manifest" href="/the_favicon/manifest.json">
+<link rel="mask-icon" href="/the_favicon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/the_favicon/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-TileImage" content="/the_favicon/mstile-144x144.png">
+<meta name="msapplication-config" content="/the_favicon/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
 
 <meta name="robots" content="noindex,nofollow" />
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Отзывы</title>
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" --><title>Отзывы</title><!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/template/css/jquery.bxslider.css" />
 <link rel="stylesheet" href="/template/css/styles.min.css" />
 <script src="/template/js/libs.min.js"></script>
@@ -26,8 +32,7 @@
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]--> 
 
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 <body>
 
@@ -101,120 +106,12 @@
 <!-- =main -->
 <div class="main">
 	<div class="container">
-<!-- InstanceBeginEditable name="main" -->
-		<!-- =breadcrumbs -->
-		<div class="breadcrumbs">
-			<ul class="B_crumbBox">
-				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>
-				<li class="B_lastCrumb"><span class="B_currentCrumb">отзывы о нашей работе</span></li>
-			</ul>
-		</div>
-		<!-- =/breadcrumbs -->
-	
-
-		<main class="text">
-			<h1 class="title">Отзывы о нашей работе - только правда без “фэйков”</h1>
-			<p>Мы оказываем услуги электрика в разных городах Подмосковья по Ярославскому и Щелковскому направлениям: Мытищи, Королев, Юбилейный, Щелково, Пушкино, Ивантеевка, Фрязино, Софрино, Хотьково, Сергиев Посад. Отзывы о нашей работе мы получаем достаточно часто. В основном они положительные. Для нас также ценны и негативные отзывы о работе наших электриков. Ведь тогда можно понять, что пошло не так в нашей работе и что нужно исправить.</p>
-		</main>
-
-		<section class="reviews">
-			<article class="reviews__item">
-				<h3 class="reviews__top">Анна, Щелково, 09.09.2017</h3>
-				<div class="reviews__text">
-					<p>Хочу поделиться отзывом о работе электрика Алексея: Огромное спасибо Александру за открытость, профессионализм, неравнодушие и комфорт в общении! Приехал быстро, сделал аккуратно, при тестировании выявил проблемы предыдущей работы, все исправил надежно, "на века". Дал хорошие советы по дальнейшим работам в квартире. Спасибо Алексею и руководителю этой компании! Буду обращаться к вам.</p>
-				</div>
-				<div class="reviews__answer">
-					<p>Анна, выражаем Вам благодарность за отклик и добрые слова. Будем дальше держать марку!</p>
-				</div>
-			</article>
-			<article class="reviews__item">
-				<h3 class="reviews__top">Ирина, поселок Лесной, 11.08.2017</h3>
-				<div class="reviews__text">
-					<p>Выражаю благодарность специалистам компании за электромонтажные работы в квартире. Все сделано очень профессионально, качественно, аккуратно, в оговоренные сроки и по приемлемой цене. К выбору компании по электромонтажным работам пришлось подойти тщательно, и я очень рада, что сделала правильный выбор!</p>
-				</div>
-				<div class="reviews__answer">
-					<p>Мы делали электромонтажные работы в новостройке в поселке Лесной Пушкинского района. Ирина, большое Вам спасибо. Очень приятно было читать Ваши теплые слова. Мы стараемся делать свою работу хорошо и качественно, чтобы результат Вас радовал и служил долго и надежно.</p>
-				</div>
-			</article>
-
-			<article class="reviews__item">
-				<h3 class="reviews__top">Владимир и Ирина, Щелково, 22.07.2017</h3>
-				<div class="reviews__text">
-					<p>Высокопрофессиональное, качественное, вежливое обслуживание!!! Спасибо Алексею! Ни к кому больше обращаться не будем! Просто удача найти таких специалистов!</p>
-				</div>
-				<div class="reviews__answer">
-					<p>Ирина и Владимир, благодарим Вас за отклик. Надеемся, что Вы порекомендуете нашу компанию Вашим знакомым.</p>
-				</div>
-			</article>
-			<article class="reviews__item">
-				<h3 class="reviews__top">Ирина, Фрязино, 01.07.2017</h3>
-				<div class="reviews__text">
-					<p>Мы с мужем в воскресенье купили люстру, и нам очень хотелось ее повесить. Муж стал подключать ее и обломил провод в потолке, причем обломил под самый корешок. Очень расстроились, так как думали, что в воскресенье мастера-электрика мы уже не найдем, а было уже часов 5 вечера, а впереди целая рабочая неделя до следующих выходных. Натолкнулись в интернете на объявление электрика. Позвонили, вызвали мастера. Приехал Алексей, поколдовал, нарастил провод (я уж не знаю, как он это сделал, чудеса). Но люстра новая висит, горит и радует. Большое спасибо, что не бросили нас в воскресенье вечером. Так, что очень рекомендую. Вежливый, вменяемый мастер.</p>
-				</div>
-				<div class="reviews__answer">
-					<p>Марина, спасибо вам за теплые слова. Алексей был премирован за хорошую работу. Но надо сказать, что ваш случай вовсе не уникальный. Мы работаем для всех наших заказчиков каждый день, включая выходные и праздничные дни до 24.00.</p>
-				</div>
-			</article>
-
-			<article class="reviews__item">
-				<h3 class="reviews__top">Алексей, Королев, 18.06.2017</h3>
-				<div class="reviews__text">
-					<p>Здравствуйте. Вы делали нам электромонтажные работы в Королеве на ул. Пионерской. Все хорошо, нам все нравится. Наш штукатур, который пришел после вас шпатлевать стены, он просто прибалдел от вашей работы. Он сказал: "электрика вся скрытая, а все равно делают все ровненько, как по линеечке, все равно ж вся красота закроется". Но есть один момент: не горит временная лампочка Ильича на кухне. Прошу вас починить. Потому что, вдруг дело не в лампочке, а в проводке, которая идет на нее. Сейчас закроем полы и потолки, и починить будет уже невозможно. С уважением, Алексей.</p>
-				</div>
-				<div class="reviews__answer">
-					<p>Мы делали монтаж электрики в Королеве у Алексея. И похоже, ребята не дотянули зажим на клеммнике в патроне. Алексей, как вы видите, мы вас не бросили, сразу приехали, косяк поправили. Теперь все работает. Письмо Алексея мы получили по почте 18 июня. А 19 июня мы исправили нашу недоработку.</p>
-				</div>
-			</article>
-			<article class="reviews__item">
-				<h3 class="reviews__top">Глеб, Мытищи, 21.05.2017</h3>
-				<div class="reviews__text">
-					<p>Я обратился к электрику, так как придя домой с работы обнаружил, что нет света в квартире. Что мне очень понравилось - это четкость в работе. Я позвонил, было 8 часов вечера. Поговорил с девушкой-оператором. Сразу после этого мне перезвонил мастер, который подъехал ко мне в Новое Медведково в Мытищах уже через полчаса. Где-то полчаса он разбирался с проблемой. Оказалось, что в одной из розеток был плохой контакт. Все починил. Четко, слаженно, без каких-то проблем. Я очень доволен. Глеб Куренков.</p>
-				</div>
-				<div class="reviews__answer">
-					<p>Глеб, вам большое спасибо за положительный, развернутый отзыв о нашей компании. Мы стараемся работать на отлично.</p>
-				</div>
-			</article>
-
-
-		</section>
-
-
-		<div class="line"></div>
-
-		<!-- =feedback -->
-		<div class="feedback">
-			<div class="feedback__content text-center">
-				<p class="title">Хотите оставить отзыв ?</p>
-				<p>Напишите Ваше сообщение, пожелание или что-нибудь доброе о нашей компании ))) Мы обязательно ответим как можно скорее</p>
-			</div>
-			<form action="#" method="post" id="feedback-form" class="feedback__form form-policy">
-				<fieldset>
-					<div class="row">
-						<input name="name" type="text" value="" class="form-control required" required placeholder="как вас зовут? *" aria-required="true" />
-						<input name="tel" type="tel" value="" class="form-control required" required placeholder="ваш номер телефона *" aria-required="true" />
-						<input name="email" type="email" value="" class="form-control required email" required placeholder="ваш e-mail *" aria-required="true" />
-					</div>
-					<div class="row">
-						<textarea name="msg" id="msg" cols="30" rows="10" placeholder="Текст вашего сообщения" class="form-control"></textarea>
-						<input type="submit" name="feedback" class="submit" value="отправить" />
-					</div>
-					<div class="qorder__form-row policy">
-						<input type="checkbox" id="checkbox2" value="" name="checkbox" checked="checked" class="user-access">
-						<label for="checkbox2">Я Согласен на обработку персональных данных и принимаю условия <a href="#.pdf" title="" target="_blank">Пользовательского соглашения</a></label>
-					</div>
-				</fieldset>
-			</form>
-		</div>
-		<!-- =/feedback -->
-
-<!-- InstanceEndEditable -->			
+<!-- InstanceBeginEditable name="main" -->		<!-- =breadcrumbs -->		<div class="breadcrumbs">			<ul class="B_crumbBox">				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>				<li class="B_lastCrumb"><span class="B_currentCrumb">отзывы о нашей работе</span></li>			</ul>		</div>		<!-- =/breadcrumbs -->		<main class="text">			<h1 class="title">Отзывы о нашей работе - только правда без “фэйков”</h1>			<p>Мы оказываем услуги электрика в разных городах Подмосковья по Ярославскому и Щелковскому направлениям: Мытищи, Королев, Юбилейный, Щелково, Пушкино, Ивантеевка, Фрязино, Софрино, Хотьково, Сергиев Посад. Отзывы о нашей работе мы получаем достаточно часто. В основном они положительные. Для нас также ценны и негативные отзывы о работе наших электриков. Ведь тогда можно понять, что пошло не так в нашей работе и что нужно исправить.</p>		</main>		<section class="reviews">			<article class="reviews__item">				<h3 class="reviews__top">Анна, Щелково, 09.09.2017</h3>				<div class="reviews__text">					<p>Хочу поделиться отзывом о работе электрика Алексея: Огромное спасибо Александру за открытость, профессионализм, неравнодушие и комфорт в общении! Приехал быстро, сделал аккуратно, при тестировании выявил проблемы предыдущей работы, все исправил надежно, "на века". Дал хорошие советы по дальнейшим работам в квартире. Спасибо Алексею и руководителю этой компании! Буду обращаться к вам.</p>				</div>				<div class="reviews__answer">					<p>Анна, выражаем Вам благодарность за отклик и добрые слова. Будем дальше держать марку!</p>				</div>			</article>			<article class="reviews__item">				<h3 class="reviews__top">Ирина, поселок Лесной, 11.08.2017</h3>				<div class="reviews__text">					<p>Выражаю благодарность специалистам компании за электромонтажные работы в квартире. Все сделано очень профессионально, качественно, аккуратно, в оговоренные сроки и по приемлемой цене. К выбору компании по электромонтажным работам пришлось подойти тщательно, и я очень рада, что сделала правильный выбор!</p>				</div>				<div class="reviews__answer">					<p>Мы делали электромонтажные работы в новостройке в поселке Лесной Пушкинского района. Ирина, большое Вам спасибо. Очень приятно было читать Ваши теплые слова. Мы стараемся делать свою работу хорошо и качественно, чтобы результат Вас радовал и служил долго и надежно.</p>				</div>			</article>			<article class="reviews__item">				<h3 class="reviews__top">Владимир и Ирина, Щелково, 22.07.2017</h3>				<div class="reviews__text">					<p>Высокопрофессиональное, качественное, вежливое обслуживание!!! Спасибо Алексею! Ни к кому больше обращаться не будем! Просто удача найти таких специалистов!</p>				</div>				<div class="reviews__answer">					<p>Ирина и Владимир, благодарим Вас за отклик. Надеемся, что Вы порекомендуете нашу компанию Вашим знакомым.</p>				</div>			</article>			<article class="reviews__item">				<h3 class="reviews__top">Ирина, Фрязино, 01.07.2017</h3>				<div class="reviews__text">					<p>Мы с мужем в воскресенье купили люстру, и нам очень хотелось ее повесить. Муж стал подключать ее и обломил провод в потолке, причем обломил под самый корешок. Очень расстроились, так как думали, что в воскресенье мастера-электрика мы уже не найдем, а было уже часов 5 вечера, а впереди целая рабочая неделя до следующих выходных. Натолкнулись в интернете на объявление электрика. Позвонили, вызвали мастера. Приехал Алексей, поколдовал, нарастил провод (я уж не знаю, как он это сделал, чудеса). Но люстра новая висит, горит и радует. Большое спасибо, что не бросили нас в воскресенье вечером. Так, что очень рекомендую. Вежливый, вменяемый мастер.</p>				</div>				<div class="reviews__answer">					<p>Марина, спасибо вам за теплые слова. Алексей был премирован за хорошую работу. Но надо сказать, что ваш случай вовсе не уникальный. Мы работаем для всех наших заказчиков каждый день, включая выходные и праздничные дни до 24.00.</p>				</div>			</article>			<article class="reviews__item">				<h3 class="reviews__top">Алексей, Королев, 18.06.2017</h3>				<div class="reviews__text">					<p>Здравствуйте. Вы делали нам электромонтажные работы в Королеве на ул. Пионерской. Все хорошо, нам все нравится. Наш штукатур, который пришел после вас шпатлевать стены, он просто прибалдел от вашей работы. Он сказал: "электрика вся скрытая, а все равно делают все ровненько, как по линеечке, все равно ж вся красота закроется". Но есть один момент: не горит временная лампочка Ильича на кухне. Прошу вас починить. Потому что, вдруг дело не в лампочке, а в проводке, которая идет на нее. Сейчас закроем полы и потолки, и починить будет уже невозможно. С уважением, Алексей.</p>				</div>				<div class="reviews__answer">					<p>Мы делали монтаж электрики в Королеве у Алексея. И похоже, ребята не дотянули зажим на клеммнике в патроне. Алексей, как вы видите, мы вас не бросили, сразу приехали, косяк поправили. Теперь все работает. Письмо Алексея мы получили по почте 18 июня. А 19 июня мы исправили нашу недоработку.</p>				</div>			</article>			<article class="reviews__item">				<h3 class="reviews__top">Глеб, Мытищи, 21.05.2017</h3>				<div class="reviews__text">					<p>Я обратился к электрику, так как придя домой с работы обнаружил, что нет света в квартире. Что мне очень понравилось - это четкость в работе. Я позвонил, было 8 часов вечера. Поговорил с девушкой-оператором. Сразу после этого мне перезвонил мастер, который подъехал ко мне в Новое Медведково в Мытищах уже через полчаса. Где-то полчаса он разбирался с проблемой. Оказалось, что в одной из розеток был плохой контакт. Все починил. Четко, слаженно, без каких-то проблем. Я очень доволен. Глеб Куренков.</p>				</div>				<div class="reviews__answer">					<p>Глеб, вам большое спасибо за положительный, развернутый отзыв о нашей компании. Мы стараемся работать на отлично.</p>				</div>			</article>		</section>		<div class="line"></div>		<!-- =feedback -->		<div class="feedback">			<div class="feedback__content text-center">				<p class="title">Хотите оставить отзыв ?</p>				<p>Напишите Ваше сообщение, пожелание или что-нибудь доброе о нашей компании ))) Мы обязательно ответим как можно скорее</p>			</div>			<form action="#" method="post" id="feedback-form" class="feedback__form form-policy">				<fieldset>					<div class="row">						<input name="name" type="text" value="" class="form-control required" required placeholder="как вас зовут? *" aria-required="true">						<input name="tel" type="tel" value="" class="form-control required" required placeholder="ваш номер телефона *" aria-required="true">						<input name="email" type="email" value="" class="form-control required email" required placeholder="ваш e-mail *" aria-required="true">					</div>					<div class="row">						<textarea name="msg" id="msg" cols="30" rows="10" placeholder="Текст вашего сообщения" class="form-control"></textarea>						<input type="submit" name="feedback" class="submit" value="отправить">					</div>					<div class="qorder__form-row policy">						<input type="checkbox" id="checkbox2" value="" name="checkbox" checked="checked" class="user-access">						<label for="checkbox2">Я Согласен на обработку персональных данных и принимаю условия <a href="#.pdf" title="" target="_blank">Пользовательского соглашения</a></label>					</div>				</fieldset>			</form>		</div>		<!-- =/feedback --><!-- InstanceEndEditable -->			
 	</div>
 </div>
 <!-- =/main-->
 
-<!-- InstanceBeginEditable name="EditRegion5" -->
-
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion5" --><!-- InstanceEndEditable -->
 
 
 <!-- =footer -->
@@ -339,21 +236,7 @@
 <!-- =/modal writeus -->
 
 
-<!-- InstanceBeginEditable name="EditRegion4" -->
-<!-- =modal infomodal -->
-<div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="container">
-			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>
-			<div class="modal__content">
-				<h2 class="title"></h2>
-				<div class="modal__text"></div>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- =/modal infomodal -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion4" --><!-- =modal infomodal --><div class="modal fade infomodal" id="infomodal" tabindex="-1" role="dialog" aria-hidden="true">	<div class="modal-dialog" role="document">		<div class="container">			<button type="button" data-dismiss="modal" class="close-modal">&lt; <span>Х</span> &gt;</button>			<div class="modal__content">				<h2 class="title"></h2>				<div class="modal__text"></div>			</div>		</div>	</div></div><!-- =/modal infomodal --><!-- InstanceEndEditable -->
 
 
 <div id="outdated"></div>
@@ -369,7 +252,6 @@
 <script src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
 <script src="//yastatic.net/share2/share.js"></script>
 
-<!-- InstanceBeginEditable name="EditRegion6" -->
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion6" --><!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
