--- a/app/news.html
+++ b/app/news.html
@@ -77,7 +77,7 @@
 					<a class="hover-a" href="mailto:info@schelkovo-electric.com">info@schelkovo-electric.com</a>
 				</div>
 			</nav>
-			<button type="button" class="navbar-toggle">
+			<button type="button" class="navbar-toggle" aria-label="Меню">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
